--- a/src/components/base/SiteHeader.astro
+++ b/src/components/base/SiteHeader.astro
@@ -4,7 +4,7 @@ import ToggleSwitch from "@components/partials/ToggleSwitch.astro";
 import IconInstagram from "@components/icons/IconInstagram.astro";
 ---
 
-<header class="site-header py-20">
+<header class="site-header py-20 lg:py-40">
     <div class="grid relative">
         <div class="flex items-baseline font-secondary text-green text-[24px] lg:text-[40px] font-light col-span-12 lg:col-span-8">
             Marvin Schmidt Codes <span class="block w-1 h-22 lg:h-32 ml-7 bg-green"></span>
