--- a/src/components/modules/AnchorNavigation.astro
+++ b/src/components/modules/AnchorNavigation.astro
@@ -1,20 +1,20 @@
 ---
 
 ---
-<nav data-anchor-navigation class="anchor-navigation module sticky -top-1 left-0 z-555 bg-black transition-colors">
+<nav data-anchor-navigation class="anchor-navigation module sticky -top-1 left-0 z-555 bg-black transition-[background-color]">
     <div class="grid">
-        <ol class="col-span-full flex justify-center py-15
+        <ol class="col-span-full flex justify-center
         before:content-[''] before:absolute before:top-0 before:left-0 before:right-0 before:border-t before:border-gray-300 before:w-screen
         after:content-[''] after:absolute after:bottom-0 after:left-0 after:right-0 after:border-t after:border-gray-300 after:w-screen
         ">
-            <li class="px-15">
-                <a href="#cases" class="no-underline text-18 font-normal transition-none">Case studies</a>
+            <li>
+                <a href="#cases" class="block py-15 px-25 no-underline text-18 font-normal [&.active]:bg-green [&:hover]:bg-green [&:hover]:text-black">Case studies</a>
             </li>
-            <li class="px-15">
-                <a href="#skills" class="no-underline text-18 font-normal transition-none">Skills</a>
+            <li>
+                <a href="#skills" class="block py-15 px-25 no-underline text-18 font-normal [&.active]:bg-green [&:hover]:bg-green [&:hover]:text-black">Skills</a>
             </li>
-            <li class="px-15">
-                <a href="#lebenslauf" class="no-underline text-18 font-normal transition-none">Lebenslauf</a>
+            <li>
+                <a href="#lebenslauf" class="block py-15 px-25 no-underline text-18 font-normal [&.active]:bg-green [&:hover]:bg-green [&:hover]:text-black">Lebenslauf</a>
             </li>
         </ol>
     </div>
