--- a/src/components/modules/Skills.astro
+++ b/src/components/modules/Skills.astro
@@ -6,7 +6,7 @@ import Accordion from "@components/partials/Accordion.astro";
 <section class="skills module" aria-labelledby="skills-title" id="skills" role="region">
     <div class="grid">
         <div class="col-span-full lg:flex lg:flex-wrap">
-            <h2 id="skills-title" class="w-full">Skills</h2>
+            <h2 id="skills-title" class="w-full mb-20">Skills</h2>
             <Accordion className="bg-red text-white" openInitially={true}>
                 <Fragment slot="title">
                     Core Frontend
