--- a/src/components/base/SiteHeader.astro
+++ b/src/components/base/SiteHeader.astro
@@ -11,7 +11,7 @@ import IconInstagram from "@components/icons/IconInstagram.astro";
         </div>
         <div class="absolute lg:static top-0 right-0 lg:col-span-4 lg:flex lg:items-center lg:justify-between">
             <ToggleSwitch textOn="Layout-Linien anzeigen" className="absolute lg:relative top-20 right-0 rotate-270 lg:rotate-0 lg:top-auto lg:right-auto" />
-            <a href="/" target="_blank" class="absolute lg:relative top-0 right-40 lg:-right-6 flex items-center justify-center w-38 h-38">
+            <a href="https://www.instagram.com/marvincschmidt" target="_blank" class="absolute lg:relative top-0 right-40 lg:-right-6 flex items-center justify-center w-38 h-38">
                 <IconInstagram className="w-30 h-30" />
             </a>
 
