--- a/src/components/modules/HeroIntro.astro
+++ b/src/components/modules/HeroIntro.astro
@@ -21,7 +21,7 @@ import Button from "../partials/Button.astro";
                                 imageWidth: 450
                             }
                         ]}
-                        loading="lazy"
+                        loading="eager"
                         alt="A description of my image."
                 />
             </div>
