--- a/src/components/modules/HeroIntro.astro
+++ b/src/components/modules/HeroIntro.astro
@@ -22,6 +22,7 @@ import Button from "../partials/Button.astro";
                             }
                         ]}
                         loading="eager"
+                        fetchPriority="high"
                         alt="A description of my image."
                 />
             </div>
