--- a/src/styles/theme/index.css
+++ b/src/styles/theme/index.css
@@ -6,6 +6,7 @@
     --color-grey:                   #7D8287;
 
     --color-black:                  #2C2F33;
+    --color-full-black:             #000;
 
     --color-red:                    #D24436;
     --color-orange:                 #B85318;
