--- a/src/components/base/SiteHeader.astro
+++ b/src/components/base/SiteHeader.astro
@@ -9,9 +9,9 @@ import IconInstagram from "@components/icons/IconInstagram.astro";
         <div class="flex items-baseline font-secondary text-green text-[24px] lg:text-[40px] font-light col-span-12 lg:col-span-8">
             <span data-typing-effect>Marvin Schmidt Codes</span> <span class="block w-1 h-22 lg:h-32 ml-7 bg-green animate-[blink_1s_steps(2,start)_infinite]"></span>
         </div>
-        <div class="absolute lg:static top-0 right-0 lg:col-span-4 lg:flex lg:items-center lg:justify-between">
-            <ToggleSwitch textOn="Layout-Linien anzeigen" className="absolute lg:relative top-20 right-0 rotate-270 lg:rotate-0 lg:top-auto lg:right-auto" />
-            <a href="https://www.instagram.com/marvincschmidt" target="_blank" class="absolute lg:relative top-0 right-40 lg:-right-6 flex items-center justify-center w-38 h-38">
+        <div class="absolute top-0 right-0">
+            <!-- <ToggleSwitch textOn="Layout-Linien anzeigen" className="absolute lg:relative top-20 right-0 rotate-270 lg:rotate-0 lg:top-auto lg:right-auto" /> -->
+            <a href="https://www.instagram.com/marvincschmidt" target="_blank" class="absolute lg:relative top-0 right-4 lg:right-14 flex items-center justify-center w-38 h-38" title="Zu Instagram">
                 <IconInstagram className="w-30 h-30" />
             </a>
 
