--- a/src/components/base/SiteHeader.astro
+++ b/src/components/base/SiteHeader.astro
@@ -7,7 +7,7 @@ import IconInstagram from "@components/icons/IconInstagram.astro";
 <header class="site-header py-20 lg:py-40">
     <div class="grid relative">
         <div class="flex items-baseline font-secondary text-green text-[24px] lg:text-[40px] font-light col-span-12 lg:col-span-8">
-            <span data-typing-effect>Marvin Schmidt Codes</span> <span class="block w-1 h-22 lg:h-32 ml-7 bg-green animate-[blink_1s_steps(2,start)_infinite]"></span>
+            <span data-typing-effect class="inline-block h-28 lg:h-32">Marvin Schmidt Codes</span> <span class="block w-1 h-22 lg:h-32 ml-7 bg-green animate-[blink_1s_steps(2,start)_infinite]"></span>
         </div>
         <div class="absolute top-0 right-0">
             <!-- <ToggleSwitch textOn="Layout-Linien anzeigen" className="absolute lg:relative top-20 right-0 rotate-270 lg:rotate-0 lg:top-auto lg:right-auto" /> -->
