--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -55,12 +55,14 @@ const {
 </html>
 
 <script>
-    import('@scripts/base/stars-effect').then((module) => {
-        const { starsEffect } = module;
-        starsEffect.init();
-    });
+    if(window.innerWidth > 1024){
+        import('@scripts/base/stars-effect').then((module) => {
+            const { starsEffect } = module;
+            starsEffect.init();
+        });
+    }
+    
     const $imageTiltElements = document.querySelector('*[data-image-tilt-effect]');
-
     if($imageTiltElements){
         import('@scripts/base/image-tile-effect').then((module) => {
             const { imageTileEffect } = module;
