--- a/src/components/modules/Skills.astro
+++ b/src/components/modules/Skills.astro
@@ -3,7 +3,7 @@
 import Accordion from "@components/partials/Accordion.astro";
 ---
 
-<section class="skills module" aria-labelledby="skills-title" id="skills" role="region">
+<section class="skills module" aria-labelledby="skills-title" id="skills" role="region" data-scroll-reveal>
     <div class="grid">
         <h2 id="skills-title" class="col-span-full lg:flex lg:flex-wrap mb-20">Skills</h2>
         <div class="col-span-full lg:flex lg:flex-nowrap">
