--- a/src/components/modules/AnchorNavigation.astro
+++ b/src/components/modules/AnchorNavigation.astro
@@ -1,7 +1,7 @@
 ---
 
 ---
-<nav data-anchor-navigation class="anchor-navigation module sticky -top-1 left-0 z-555 bg-black transition-[background-color]">
+<nav data-anchor-navigation data-scroll-reveal class="anchor-navigation module sticky -top-1 left-0 z-555 bg-black transition-[background-color]">
     <div class="grid">
         <ol class="col-span-full flex justify-center
         before:content-[''] before:absolute before:top-0 before:left-0 before:right-0 before:border-t before:border-gray-300 before:w-screen
