--- a/src/components/modules/CaseStudies.astro
+++ b/src/components/modules/CaseStudies.astro
@@ -47,7 +47,7 @@ const swiperSettings = {
 
 const swiperSettingsJSON = JSON.stringify(swiperSettings);
 ---
-<section class="case-studies module overflow-hidden" id="cases" aria-labelledby="case-studies-title" role="region">
+<section class="case-studies module overflow-hidden" id="cases" aria-labelledby="case-studies-title" role="region" data-scroll-reveal>
     <div class="grid relative">
         <h2 id="case-studies-title" class="col-span-full mb-20">Case Studies</h2>
         <em class="col-span-full h4 not-italic font-light mb-10 lg:absolute lg:top-640 lg-left-0">Featured</em>
