--- a/src/components/modules/AnchorNavigation.astro
+++ b/src/components/modules/AnchorNavigation.astro
@@ -21,12 +21,35 @@
 </nav>
 
 <script>
-    const $anchorNavigation = document.querySelector('*[data-anchor-navigation]');
+    const $anchorNavigation = document.querySelector('[data-anchor-navigation]');
 
-    if($anchorNavigation){
-        import('@scripts/modules/anchor-navigation').then((module) => {
-            const { anchorNavigation } = module;
-            anchorNavigation.init();
-        });
+    if ($anchorNavigation) {
+        const loadAnchorNavigation = () => {
+            import('@scripts/modules/anchor-navigation')
+                .then(({ anchorNavigation }) => {
+                    anchorNavigation.init();
+                })
+                .catch((error) => {
+                    console.error('Error loading module:', error);
+                });
+        };
+
+        const observer = new IntersectionObserver(
+            (entries, obs) => {
+                entries.forEach(entry => {
+                    if (entry.isIntersecting) {
+                        loadAnchorNavigation();
+                        obs.disconnect(); // Beobachtung beenden, wenn geladen
+                    }
+                });
+            },
+            {
+                root: null,
+                rootMargin: '0px',
+                threshold: 0.1 // bei 10 % Sichtbarkeit laden
+            }
+        );
+
+        observer.observe($anchorNavigation);
     }
 </script>
