--- a/src/components/modules/CaseStudies.astro
+++ b/src/components/modules/CaseStudies.astro
@@ -55,7 +55,7 @@ const swiperSettingsJSON = JSON.stringify(swiperSettings);
             <Swiper className="!overflow-visible !static" swiperSettings={swiperSettingsJSON}>
                 <div class="swiper-slide">
                     <div class="grid px-0 grid-cols-9">
-                        <figure class="col-span-full h-300 lg:h-541 figure-contain-image mb-80 lg:mb-110 bg-white">
+                        <figure class="col-span-full h-300 lg:h-541 figure-contain-image mb-80 lg:mb-110 bg-transparent">
                             <Image
                                     src="/images/project1.png"
                                     width="300"
@@ -79,6 +79,7 @@ const swiperSettingsJSON = JSON.stringify(swiperSettings);
                                         }
                                     ]}
                                     loading="lazy"
+                                    fetchPriority="low"
                                     alt="A description of my image."
                             />
                         </figure>
@@ -91,7 +92,7 @@ const swiperSettingsJSON = JSON.stringify(swiperSettings);
                 </div>
                 <div class="swiper-slide">
                     <div class="grid px-0 grid-cols-9">
-                        <figure class="col-span-full h-300 lg:h-541 figure-contain-image mb-80 lg:mb-110 bg-white">
+                        <figure class="col-span-full h-300 lg:h-541 figure-contain-image mb-80 lg:mb-110 bg-transparent">
                             <Image
                                     src="/images/project3.png"
                                     width="300"
@@ -115,6 +116,7 @@ const swiperSettingsJSON = JSON.stringify(swiperSettings);
                                         }
                                     ]}
                                     loading="lazy"
+                                    fetchPriority="low"
                                     alt="A description of my image."
                             />
                         </figure>
@@ -127,7 +129,7 @@ const swiperSettingsJSON = JSON.stringify(swiperSettings);
                 </div>
                 <div class="swiper-slide">
                     <div class="grid px-0 grid-cols-9">
-                        <figure class="col-span-full h-300 lg:h-541 figure-contain-image mb-80 lg:mb-110 bg-white">
+                        <figure class="col-span-full h-300 lg:h-541 figure-contain-image mb-80 lg:mb-110 bg-transparent">
                             <Image
                                     src="/images/project2.png"
                                     width="300"
@@ -151,6 +153,7 @@ const swiperSettingsJSON = JSON.stringify(swiperSettings);
                                         }
                                     ]}
                                     loading="lazy"
+                                    fetchPriority="low"
                                     alt="A description of my image."
                             />
                         </figure>
