--- a/src/components/modules/CV.astro
+++ b/src/components/modules/CV.astro
@@ -3,10 +3,10 @@
 import CVEntry from "@components/partials/CVEntry.astro";
 ---
 
-<section class="cv module" aria-labelledby="cv-title" id="lebenslauf" role="region" data-scroll-reveal>
+<section class="cv module" aria-labelledby="cv-title" id="lebenslauf" role="region">
     <div class="grid">
         <div class="col-span-full">
-            <h2 id="cv-title" class="mb-90">Lebenslauf</h2>
+            <h2 data-scroll-reveal id="cv-title" class="mb-90">Lebenslauf</h2>
             <div data-cv class="relative pb-10 pt-30">
                 <div class="absolute top-0 left-25 w-1 h-1/1 bg-white lg:left-1/2 lg:-translate-x-1/2"></div>
                 <div class="sticky top-180 w-48 ml-1 -translate-y-80 lg:block lg:ml-[50%] lg:-translate-x-1/2 lg:w-70">
