--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -18,7 +18,7 @@
 
 @import "./components/site-navigation.css";
 @import "./components/module.css";
-
+@import "./components/scroll-reveal.css";
 
 /* -------------------------------------------------------- */
 /*                    UTILITY STYLES                        */
