--- a/src/components/partials/CVEntry.astro
+++ b/src/components/partials/CVEntry.astro
@@ -1,5 +1,5 @@
 ---
-const { alignment = 'left'} = Astro.props;
+const { alignment = 'left', ...props} = Astro.props;
 
 let additionalClasses = 'lg:float-left lg:mb-150 lg:[&:nth-child(3)]:clear-both lg:text-right lg:before:left-auto lg:before:-right-7 lg:after:left-auto lg:after:right-0';
 
@@ -13,7 +13,7 @@ if(alignment === 'right'){
     containerClass = 'lg:ml-130';
 }
 ---
-<li class=`relative mb-60 before:content-[''] before:absolute before:top-5 before:-left-73 before:h-16 before:w-16 before:rounded-full before:bg-white before:z-200 after:content-[''] after:absolute after:top-13 after:-left-60 after:right-0 after:border-t after:border-gray-300 after:w-40 lg:w-[50%] lg:mb-0 lg:after:w-60 ${additionalClasses}`>
+<li class=`relative mb-60 before:content-[''] before:absolute before:top-5 before:-left-73 before:h-16 before:w-16 before:rounded-full before:bg-white before:z-200 after:content-[''] after:absolute after:top-13 after:-left-60 after:right-0 after:border-t after:border-gray-300 after:w-40 lg:w-[50%] lg:mb-0 lg:after:w-60 ${additionalClasses}` data-scroll-reveal>
     <div class=`lg:inline-block lg:w-390 ${containerClass}`>
         <strong class="h4 font-light lg:text-24">
             <slot name="year"></slot>
