--- a/src/components/base/SiteHeader.astro
+++ b/src/components/base/SiteHeader.astro
@@ -6,9 +6,9 @@ import IconInstagram from "@components/icons/IconInstagram.astro";
 
 <header class="site-header py-20 lg:py-40">
     <div class="grid relative">
-        <div class="flex items-baseline font-secondary text-green text-[24px] lg:text-[40px] font-light col-span-12 lg:col-span-8 lg:h-35">
+        <a href="/" class="flex items-baseline font-secondary text-green text-[24px] lg:text-[40px] font-light col-span-12 lg:col-span-8 lg:h-35 no-underline">
             <span data-typing-effect class="inline-block min-w-10 h-28 lg:h-32">Marvin Schmidt Codes</span> <span class="block w-1 h-22 lg:h-32 ml-7 bg-green animate-[blink_1s_steps(2,start)_infinite]"></span>
-        </div>
+        </a>
         <div class="absolute -top-5 lg:-top-2 right-0">
             <!-- <ToggleSwitch textOn="Layout-Linien anzeigen" className="absolute lg:relative top-20 right-0 rotate-270 lg:rotate-0 lg:top-auto lg:right-auto" /> -->
             <a href="https://www.instagram.com/marvincschmidt" target="_blank" class="absolute lg:relative top-0 right-4 lg:right-14 flex items-center justify-center w-38 h-38" title="Zu Instagram">
