--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,23 +13,23 @@ const {
 <html lang="de" dir="ltr">
 	<head>
 		<meta charset="UTF-8">
-		<meta name="description" content="Astro description">
+		<meta name="description" content="Mit Fokus auf Performance, Accessibility und sauberen Code entwickle ich Web-Erlebnisse, die Nutzer lieben und Unternehmen voranbringen – minimalistisch gedacht, detailverliebt umgesetzt, vom Design bis zur fertigen Website.">
         <meta name="viewport" content="width=device-width, initial-scale=1 viewport-fit=cover">
 		<meta name="generator" content={Astro.generator}>
         <meta http-equiv="Content-Security-Policy" content="font-src 'self';">
 
-        <meta property="og:title" content="Title">
-        <meta property="og:description" content="Description">
+        <meta property="og:title" content="Marvin Schmidt - Frontend Developer">
+        <meta property="og:description" content="Mit Fokus auf Performance, Accessibility und sauberen Code entwickle ich Web-Erlebnisse, die Nutzer lieben und Unternehmen voranbringen – minimalistisch gedacht, detailverliebt umgesetzt, vom Design bis zur fertigen Website.">
         <meta property="og:type" content="website">
-        <meta property="og:url" content="https://tempo-run-astro5.netlify.app/">
+        <meta property="og:url" content={import.meta.env.PUBLIC_PAGE_URL}>
         <meta property="og:image" content="">
 
-        <meta name="twitter:title" content="Title">
-        <meta name="twitter:description" content="Description">
+        <meta name="twitter:title" content="Marvin Schmidt - Frontend Developer">
+        <meta name="twitter:description" content="Mit Fokus auf Performance, Accessibility und sauberen Code entwickle ich Web-Erlebnisse, die Nutzer lieben und Unternehmen voranbringen – minimalistisch gedacht, detailverliebt umgesetzt, vom Design bis zur fertigen Website.">
         <meta name="twitter:image" content="">
         <meta name="twitter:card" content="summary">
 
-        <link rel="canonical" href="https://tempo-run-astro5.netlify.app/">
+        <link rel="canonical" href={import.meta.env.PUBLIC_PAGE_URL}>
 
         <link rel="preload" href="/fonts/poppins-v24-latin/poppins-v24-latin-200.woff2" as="font" type="font/woff2" crossorigin>
         <link rel="preload" href="/fonts/poppins-v24-latin/poppins-v24-latin-200italic.woff2" as="font" type="font/woff2" crossorigin>
