--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,7 @@ import Skills from "@components/modules/Skills.astro";
 import CV from "@components/modules/CV.astro";
 ---
 
-<Layout title="Marvin Schmidt Codes - Frontend Developer">
+<Layout title="Marvin Schmidt Codes - Startseite">
     <HeroIntro />
     <AnchorNavigation />
     <CaseStudies />
