--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -8,7 +8,7 @@ const {
     title
 } = Astro.props;
 
-const currentPageUrl = Astro.url.pathname;
+const currentPageUrl = Astro.url;
 ---
 
 <!DOCTYPE html>
