added Game component

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,6 +5,7 @@ import AnchorNavigation from "@components/modules/AnchorNavigation.astro";
 import CaseStudies from "@components/modules/CaseStudies.astro";
 import Skills from "@components/modules/Skills.astro";
 import CV from "@components/modules/CV.astro";
+import Game from "@components/modules/Game.astro";
 ---
 
 <Layout title="Marvin Schmidt Codes - Startseite">
@@ -13,6 +14,7 @@ import CV from "@components/modules/CV.astro";
     <CaseStudies />
     <Skills />
     <CV />
+    <Game/>
 </Layout>
 
 
