--- a/src/components/base/SiteFooter.astro
+++ b/src/components/base/SiteFooter.astro
@@ -3,7 +3,7 @@
 import Button from "@components/partials/Button.astro";
 ---
 
-<footer class="site-footer border-t-1 mt-100 pt-55 pb-120 lg:pt-70 lg:pb-12" data-scroll-reveal>
+<footer class="site-footer border-t-1 mt-200 pt-55 pb-120 lg:pt-70 lg:pb-12" id="kontakt" data-scroll-reveal>
     <div class="grid">
         <div class="col-span-12 lg:col-span-5 lg:col-start-2">
             <h2 class="h3 mb-15">Hast du ein Projekt im Sinn?</h2>
