--- a/src/components/modules/CV.astro
+++ b/src/components/modules/CV.astro
@@ -34,7 +34,7 @@ import CVEntry from "@components/partials/CVEntry.astro";
                         <Fragment slot="year">2019 - heute</Fragment>
                         <Fragment slot="title">Frontend-Entwickler</Fragment>
                         <p>
-                            <a href="www.active-value.de">
+                            <a href="www.active-value.de" data-astro-prefetch="false">
                                 active value GmbH Düsseldorf
                             </a>
                         </p>
