--- a/src/components/modules/Game.astro
+++ b/src/components/modules/Game.astro
@@ -1,14 +1,14 @@
 ---
 
 ---
-<div class="jump-game module" data-jump-game>
+<section class="jump-game module" id="game" aria-labelledby="game-title" role="region" data-jump-game>
     <div class="grid">
         <div class="col-span-12 h-300 lg:col-span-10 lg:col-start-2">
-            <h2 data-scroll-reveal class="mb-20">Lust auf ein Spiel?</h2>
+            <h2 id="game-title" data-scroll-reveal class="mb-20">Lust auf ein Spiel?</h2>
             <div data-scroll-reveal class="jump-game__wrapper"></div>
         </div>
     </div>
-</div>
+</section>
 
 
 <style>
