--- a/src/components/modules/AnchorNavigation.astro
+++ b/src/components/modules/AnchorNavigation.astro
@@ -1,7 +1,7 @@
 ---
 
 ---
-<nav data-anchor-navigation data-scroll-reveal class="anchor-navigation module sticky -top-1 left-0 z-555 bg-black transition-[background-color]">
+<nav data-anchor-navigation data-scroll-reveal class="anchor-navigation module sticky -top-1 left-0 z-555 bg-black transition-all">
     <div class="grid">
         <ol class="col-span-full flex justify-center
         before:content-[''] before:absolute before:top-0 before:left-0 before:right-0 before:border-t before:border-gray-300 before:w-screen
@@ -15,6 +15,12 @@
             </li>
             <li>
                 <a href="#lebenslauf" class="block py-15 px-25 no-underline text-18 font-normal [&.active]:bg-green [&:hover]:bg-green [&:hover]:text-black [&.active]:text-black">Lebenslauf</a>
+            </li>
+            <li>
+                <a href="#game" class="block py-15 px-25 no-underline text-18 font-normal [&.active]:bg-green [&:hover]:bg-green [&:hover]:text-black [&.active]:text-black">Spiel</a>
+            </li>
+            <li>
+                <a href="#kontakt" class="block py-15 px-25 no-underline text-18 font-normal [&.active]:bg-green [&:hover]:bg-green [&:hover]:text-black [&.active]:text-black">Kontakt</a>
             </li>
         </ol>
     </div>
